Tried readjusting the form to avoid the hero becoming too large

--- a/css/home.css
+++ b/css/home.css
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10% 0 8% 0;
+    padding: 10% 0 0 0;
     border-radius: 0 0 80px 80px;
     gap: 32px;
 }
@@ -480,7 +480,7 @@
 
     /*Hero -- Mobile*/
     .hero {
-        padding: 40% 0 26% 0;
+        padding-top: 40%;
     }
 
     .hero-content {
